list servers complete

--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
                 <input type="text" name="nick-game" id="name-tag" placeholder="Username">
             </div>
             <div id="server-select">
-                <label for="servers">Escolha um server</label>
+                <label for="list-servers">Escolha um server</label>
 
-                <select name="server" id="servers"></select>
+                <select name="server" id="list-servers"></select>
             </div>
             <button type="submit" title="Enter Game">Começar jogo!</button>
         </section>
