rename user complete

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
         <section id="menu">
             <div id="username">
                 <label for="name-tag">Nome:</label>
-                <input type="text" name="nick-game" id="name-tag" placeholder="Username">
+                <input type="text" name="nick-game" id="name-tag" placeholder="Insira um nome pro jogador" value="">
+                <button type="submit" id="rename-user">Renomear</button>
             </div>
             <div id="server-select">
                 <label for="list-servers">Escolha um server</label>
