--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,10 @@
         <section id="chat-lobby">
             <div id="content-posts" class="content-info"><span>Chat Online</span></div>
             <div id="list-posts"></div>
+            <div id="fill-text">
+                <textarea name="body-post" id="body-post" placeholder="Escreva a mensagem"></textarea>
+                <button type="submit" id="send-post">Enviar</button>
+            </div>
         </section>
     </main>
 
