change server user complete

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
                     <select name="server" id="list-servers"></select>
                 </div>
-                <button type="submit" title="Enter Game">Começar jogo!</button>
+                <button type="submit" title="Enter Game" id="start-game">Começar jogo!</button>
             </section>
 
             <section id="chat-lobby">
