--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             </section>
 
             <section id="chat-lobby">
-                <div id="content-posts" class="content-info"><span>Chat Online</span></div>
+                <div id="content-posts" class="content-info"><span>Chat</span></div>
                 <div id="list-posts"></div>
                 <div id="fill-text">
                     <textarea name="body-post" id="body-post" placeholder="Escreva a mensagem"></textarea>
