--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
                 <p><span>Lista de Usuários</span></p>
             </div>
             <div id="list-users"></div>
+            <div id="cont-users-info"><span id="cont-users">0</span><span> usuários online</span></div>
         </div>
 
         <div id="menu" class="section-content">
