--- a/public/index.html
+++ b/public/index.html
@@ -11,46 +11,55 @@
 </head>
 
 <body>
-    <main id="ui">
-        <div id="users-connected" class="section-content">
-            <div id="content-users" class="content-info">
-                <p><span>Lista de Usuários</span></p>
+    <main id="app">
+        <div id="ui">
+            <div id="users-connected" class="section-content">
+                <div id="content-users" class="content-info">
+                    <p><span>Lista de Usuários</span></p>
+                </div>
+                <div id="list-users" class="lists-content"></div>
+                <div id="cont-users-info"><span id="cont-users">0</span><span> usuários online</span></div>
             </div>
-            <div id="list-users"></div>
-            <div id="cont-users-info"><span id="cont-users">0</span><span> usuários online</span></div>
+
+            <div id="menu" class="section-content">
+                <div id="username">
+                    <label for="name-tag">Nome:</label>
+                    <input type="text" name="nick-game" id="name-tag" placeholder="Insira um nome pro jogador" value="">
+                </div>
+                <div id="server-select">
+                    <label for="list-servers">Escolha um server</label>
+
+                    <select name="server" id="list-servers"></select>
+                </div>
+                <button type="submit" title="Enter Game" id="start-game">Começar jogo!</button>
+            </div>
         </div>
 
-        <div id="menu" class="section-content">
-            <div id="username">
-                <label for="name-tag">Nome:</label>
-                <input type="text" name="nick-game" id="name-tag" placeholder="Insira um nome pro jogador" value="">
-            </div>
-            <div id="server-select">
-                <label for="list-servers">Escolha um server</label>
-
-                <select name="server" id="list-servers"></select>
-            </div>
-            <button type="submit" title="Enter Game" id="start-game">Começar jogo!</button>
-        </div>
-
-        <div id="chat-lobby" class="section-content">
+        <div id="chat" class="section-content">
             <div id="content-posts" class="content-info">
                 <p><span>Chat</span></p>
             </div>
-            <div id="list-posts"></div>
+            <div id="list-posts" class="lists-content"></div>
             <div id="fill-text">
                 <textarea name="body-post" id="body-post" placeholder="Escreva a mensagem"></textarea>
                 <button type="submit" id="send-post">Enviar</button>
             </div>
         </div>
-    </main>
 
-    <div id="renderer-game">
-        <canvas id="canvas"></canvas>
-        <div id="quit-game-content">
-            <button id="quit-game"><span>Quit Game</span></button>
+        <div id="chat-close">
+            <div id="list-posts-chat-close"></div>
+            <div id="content-chat-close">
+                <p><span>↵</span></p>
+            </div>
         </div>
-    </div>
+
+        <div id="renderer-game">
+            <canvas id="canvas"></canvas>
+            <div id="quit-game-content">
+                <button id="quit-game"><span>Quit Game</span></button>
+            </div>
+        </div>
+    </main>
 
     <script src="script.js" type="module"></script>
 </body>
