style chat and menu complete

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,10 @@
         <div id="chat-close">
             <div id="list-posts-chat-close"></div>
             <div id="content-chat-close">
-                <p><span>↵</span></p>
+                <p id="content-bt-open-chat"><span>↵</span></p>
+                <div id="content-notification">
+                    <p><span id="notifications">0</span></p>
+                </div>
             </div>
         </div>
 
