--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,9 @@
         </div>
 
         <div id="chat" class="section-content">
+            <div id="chat-game-info">
+                <p>Pressione Enter para minimizar o chat.</p>
+            </div>
             <div id="content-posts" class="content-info">
                 <p><span>Chat</span></p>
             </div>
